--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tmp-cpa",
   "version": "0.1.0",
   "private": true,
-  "type": "module", 
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -23,11 +23,14 @@
     "@plasmicpkgs/plasmic-rich-components": "^1.0.180",
     "@plasmicpkgs/react-awesome-reveal": "^3.8.192",
     "@plasmicpkgs/react-scroll-parallax": "^0.0.198",
+    "@plasmicpkgs/react-slick": "^0.0.215",
     "@plasmicpkgs/react-youtube": "^7.13.195",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
     "sitemap": "^7.1.1",
+    "slick-carousel": "^1.8.1",
     "stream-to-promise": "^3.0.0"
   },
   "devDependencies": {
