--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stream-to-promise": "^3.0.0"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "^17",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
