--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@plasmicpkgs/react-scroll-parallax": "^0.0.198",
     "@plasmicpkgs/react-slick": "^0.0.215",
     "@plasmicpkgs/react-youtube": "^7.13.195",
-    "next": "14.1.4",
+    "next": "^14.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-slick": "^0.30.2",
